--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slayd",
+  "name": "@cfuentessalgado/slayd",
   "version": "0.1.1",
   "description": "Simple YAML-based presentation framework",
   "main": "builder.js",
