--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple YAML-based presentation framework",
   "main": "builder.js",
   "bin": {
-    "slayd": "./builder.js"
+    "slayd": "builder.js"
   },
   "files": [
     "builder.js",
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/cfuentessalgado/slayd.git"
+    "url": "git+https://github.com/cfuentessalgado/slayd.git"
   },
   "homepage": "https://github.com/cfuentessalgado/slayd#readme",
   "bugs": {
