include prism-one-dark.css in npm package files

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "builder.js",
     "presentation.css",
     "light.css",
+    "prism-one-dark.css",
     "example.yaml",
     "README.md"
   ],
